--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,7 +8,7 @@
   <name>mental-health</name>
   <description>Mental Health Support Platform</description>
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <spring.boot.version>3.3.13</spring.boot.version>
   </properties>
   <dependencyManagement>
@@ -74,6 +74,19 @@
   </dependencies>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <release>${java.version}</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
